fixed sidebar scroll to section, fixed navbar responsivity, prevent horizontal scroll

--- a/landing/assets/css/styles.css
+++ b/landing/assets/css/styles.css
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: 'Raleway', sans-serif;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 img {
@@ -291,6 +292,8 @@ p {
 
 .navbar-container.navbar-transparent.sticky .navbar .navbar-nav .nav-item a {
   color: #222831;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .navbar-container.navbar-transparent.sticky .navbar .navbar-btn .sidebar-btn {
